Fix bugs with api requests, add profile and patient's components, form validation
